@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020141026"
-#define public MagickPackageReleaseDate "snapshot-20141026"
+#define public MagickPackageVersionAddendum ".020141030"
+#define public MagickPackageReleaseDate "snapshot-20141030"
