@@ -35,6 +35,17 @@
 <div class="document">
 
 
+<p>2014-10-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/blob.c (BlobReserveSize): Don't throw an exception if
+posix_fallocate() fails since it seems that it is not supported
+for all filesystem types, and is only intended for optimization.</li>
+<li>Magick++/lib/Image.cpp (resolutionUnits): Return resolution
+units from Image if available, else return the value from
+ImageInfo.  Issue was reported by Dirk Lemstra.</li>
+</ul>
+</blockquote>
 <p>2014-10-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
